remove pictures page. add page links at bottom of index and home link at bottom of auxilary pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Sunnyside Resort & Spa</title>
   </head>
   <body>
+    <h1>Sunnyside Resort & Spa</h1>
+    <h2>Cascade Mountians</h2>
+    <p>Welcome to the Sunnyside Resort & Spa. Located atop the sunny Mt. Saint Helens in the beautiful Cascade mountain range, our resort is a place for the whole family to dissolve their dreams!
+    </p>
+    <p>
+      <a href="accommodation.html">ACCOMMODATION</a>
+      <a href="activities.html">ACTIVITIES</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="travel.html">TRAVEL</a>
+    </p>
   </body>
 </html>
