--- a/accommodation.html
+++ b/accommodation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Sunnyside Resort Spa</title>
   </head>
   <body>
     <a href="index.html">HOME</a>
