Add photos, mad css, stuff

--- a/accommodation.html
+++ b/accommodation.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+    img {
+      margin-left: auto;
+      margin-right: auto;
+      height: 50%;
+      width: 50%;
+    }
+    </style>
     <title>Sunnyside Resort Spa</title>
   </head>
   <body>
+    <img src="img/rooms.jpg">
+    <img src="img/beach-lounge.jpg">
     <a href="index.html">HOME</a>
   </body>
 </html>
