--- a/activities.html
+++ b/activities.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Activities</title>
+    <style>
+    img {
+      display:block;
+      margin-left: auto;
+      margin-right: auto;
+      height: 50%;
+      width: 50%;
+    }
+    h1, h2, p {
+      text-align: center;
+    }
+    </style>
   </head>
-  <body>
-    <a href="index.html">HOME</a>
+  <body style="background-color:powderblue;">
+    <h1>Activities:</h1>
+    <h2>You can have so much fun!</h2>
+    <p><a href="index.html">HOME</a></p>
+    <img src="img/serious-tennis.jpg">
+    <img src="img/rad-dude.jpg">
+    <img src="img/bikes-beach.jpg">
+    <img src="img/pushing-game.jpg">
+    <img src="img/mermaid.jpg">
   </body>
 </html>
