--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Contact</title>
+    <style>
+    body {
+      text-align: center;
+      font-size: 20pt;
+      color: gold;
+    }
+    img {
+      display:block;
+      margin-left: auto;
+      margin-right: auto;
+      height: 50%;
+      width: 50%;
+    }
+    </style>
   </head>
-  <body>
+  <body style="background-color:powderblue;">
+    <h1>Contact Us!</h1>
+    <p>Send us a letter! 12456235 NE five st</p>
+    <p>Fax: 924585252-8</p>
     <a href="index.html">HOME</a>
+    <img src="img/frolicking.jpg">
   </body>
 </html>
