--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
     <title>Sunnyside Resort & Spa</title>
   </head>
   <body>
-    <h1>Sunnyside Resort & Spa</h1>
-    <h2>Cascade Mountians</h2>
-    <p>Welcome to the Sunnyside Resort & Spa. Located atop the sunny Mt. Saint Helens in the beautiful Cascade mountain range, our resort is a place for the whole family to dissolve their dreams!
-    </p>
-    <p>
-      <a href="accommodation.html">ACCOMMODATION</a>
-      <a href="activities.html">ACTIVITIES</a>
-      <a href="contact.html">CONTACT</a>
-      <a href="travel.html">TRAVEL</a>
-    </p>
+    <div id="main">
+      <img src="img/family-vaca.jpg">
+      <h1>Sunnyside Resort & Spa</h1>
+      <h2>Cascade Mountians</h2>
+      <p>
+        Welcome to the Sunnyside Resort & Spa. Located atop the sunny Mt. Saint Helens in the beautiful Cascade mountain range, our resort is a place for the whole family to dissolve their dreams!
+      </p>
+    </div>
+    <div id="foot-links">
+      <p>
+        <a href="accommodation.html">ACCOMMODATION</a>
+        <a href="activities.html">ACTIVITIES</a>
+        <a href="contact.html">CONTACT</a>
+      </p>
+    </div>
   </body>
 </html>
