add background color and center images for accommodation.html and remove cascade mountains

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <div id="main">
       <img src="img/family-vaca.jpg">
       <h1>Sunnyside Resort & Spa</h1>
-      <h2>Cascade Mountians</h2>
       <p>
-        Welcome to the Sunnyside Resort & Spa. Located atop the sunny Mt. Saint Helens in the beautiful Cascade mountain range, our resort is a place for the whole family to dissolve their dreams!
+        Welcome to the Sunnyside Resort & Spa. Located in the heart of the sunny Atlantic Ocean, our resort is a place for the whole family to dissolve their dreams!
       </p>
     </div>
     <div id="foot-links">
