--- a/accommodation.html
+++ b/accommodation.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <style>
+    body {
+      text-align: center;
+      font-size: 20pt;
+      color: gold;
+    }
     img {
+      display:block;
       margin-left: auto;
       margin-right: auto;
       height: 50%;
@@ -11,9 +17,11 @@
     </style>
     <title>Sunnyside Resort Spa</title>
   </head>
-  <body>
+  <body style="background-color:powderblue;">
+    <h1>Accomodation</h1>
+    <h2>Feel the sand between our toes</h2>
+    <a href="index.html">HOME</a>
     <img src="img/rooms.jpg">
     <img src="img/beach-lounge.jpg">
-    <a href="index.html">HOME</a>
   </body>
 </html>
