--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     }
     </style>
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:red;">
     <h1>Contact Us!</h1>
     <p>Send us a letter! 12456235 NE five st</p>
     <p>Fax: 924585252-8</p>
