--- a/accommodation.html
+++ b/accommodation.html
@@ -17,7 +17,7 @@
     </style>
     <title>Sunnyside Resort Spa</title>
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:red;">
     <h1>Accomodation</h1>
     <h2>Feel the sand between our toes</h2>
     <a href="index.html">HOME</a>
