--- a/activities.html
+++ b/activities.html
@@ -15,7 +15,7 @@
     }
     </style>
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:red;">
     <h1>Activities:</h1>
     <h2>You can have so much fun!</h2>
     <p><a href="index.html">HOME</a></p>
